Creat tetris map and login

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>RedTetris</title>
     <link rel="icon" href="http://redpelicans.com/favicon.ico">                                                                                                                                          
   </head>
-  <body>
+  <body style="margin: 0px">
     <div id="tetris"></div>
     <script src="bundle.js"></script>
   </body>
