--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>RedTetris</title>
-    <link rel="icon" href="http://redpelicans.com/favicon.ico">                                                                                                                                          
+    <link rel="icon" href="http://redpelicans.com/favicon.ico"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600i,700i&display=swap" rel="stylesheet">                                                                                                                                         
   </head>
   <body style="margin: 0px">
     <div id="tetris"></div>
