--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>RedTetris</title>
     <link rel="icon" href="http://redpelicans.com/favicon.ico"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600i,700i&display=swap" rel="stylesheet">                                                                                                                                         
   </head>
   <body style="margin: 0px">
