--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>RedTetris</title>
     <link rel="icon" href="http://redpelicans.com/favicon.ico"> 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600i,700i&display=swap" rel="stylesheet">                                                                                                                                         
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600i,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap&subset=greek" rel="stylesheet">                                                                                                                                        
   </head>
   <body style="margin: 0px">
     <div id="tetris"></div>
